<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:scrollbars="horizontal|vertical">
	<LinearLayout
		android:layout_width="fill_parent"
		android:padding="10dp"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/help_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/help"
			android:textSize="30dp"
			android:autoLink="web"
			
			/>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/help_intro"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_intro"
			android:textSize="20dp"
			android:autoLink="web"
			/>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/help_text_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_content_1"
			android:textSize="20dp"
			android:autoLink="web"
			/>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/help_text_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_content_2"
			android:textSize="20dp"
			android:autoLink="web"
			/>

		<TextView
			android:layout_marginTop="10dp"
			android:id="@+id/help_text_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_content_3"
			android:textSize="20dp"
			android:autoLink="web"
			/>

		<TextView
			android:layout_marginTop="10dp"
			android:id="@+id/help_text_4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_content_4"
			android:textSize="20dp"
			android:autoLink="web"
			/>
		<TextView
			android:layout_marginTop="10dp"
			android:id="@+id/help_text_5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_content_5"
			android:textSize="20dp"
			android:autoLink="web"
			/>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/about_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/about"
			android:textSize="30dp"
			android:autoLink="web"
			/>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/about_text_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_content_1"
			android:textSize="20dp"
			android:autoLink="web"
			/>
		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/about_text_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_content_2"
			android:textSize="20dp"
			android:autoLink="web"
			/>

		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/about_text_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_content_3"
			android:textSize="20dp"
			android:autoLink="web"
			/>

		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/about_text_4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/about_content_4"
			android:textSize="20dp"
			android:autoLink="web"
			/>

		<TextView
			android:layout_marginTop="15dp"
			android:id="@+id/license"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/license"
			android:textSize="20dp"
			android:autoLink="web"
			/>
	</LinearLayout>
</ScrollView>